--- a/SDL_OpenAudio.mediawiki
+++ b/SDL_OpenAudio.mediawiki
@@ -14,7 +14,7 @@ int SDL_OpenAudio(SDL_AudioSpec* desired,
 == Function Parameters ==
 {|
 |'''desired'''
-|the desired audio parameters; see [[#Remarks|Remarks]] for more information
+|the desired audio parameters; see [[#desired|Remarks]] for more information
 |-
 |'''obtained'''
 |a pointer to an [[SDL_AudioSpec]] structure to be filled in
@@ -67,7 +67,7 @@ SDL_PauseAudio(0);
 ```
 
 == Remarks ==
-To open the audio device a desired [[SDL_AudioSpec]] must be created. 
+<span id="desired"></span> To open the audio device a desired [[SDL_AudioSpec]] must be created. 
 ```c++
 SDL_AudioSpec *desired;
 .
