--- a/SDL_WindowFlags.mediawiki
+++ b/SDL_WindowFlags.mediawiki
@@ -50,6 +50,7 @@ You can add your code example here
 You can add useful comments here
 
 == Related Functions ==
+:[[SDL_CreateWindow]]
 :[[SDL_GetWindowFlags]]
 
 ----
