--- a/SDL_GetClosestDisplayMode.mediawiki
+++ b/SDL_GetClosestDisplayMode.mediawiki
@@ -29,7 +29,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-The available display modes are scanned, and '''closest''' is filled in with the closest mode matching the requested mode and returned. The '''mode''' format and refresh_rate default to the desktop mode if they are 0. The modes are scanned with size being first priority, format being second priority, and finally checking the refresh_rate. If all the available modes are too small, then NULL is returned.
+The available display modes are scanned and '''closest''' is filled in with the closest mode matching the requested mode and returned. The mode format and refresh rate default to the desktop mode if they are 0. The modes are scanned with size being first priority, format being second priority, and finally checking the refresh rate. If all the available modes are too small, then NULL is returned.
 
 == Related Functions ==
 :[[SDL_GetDisplayMode]]
