--- a/SDL_GetCurrentDisplayMode.mediawiki
+++ b/SDL_GetCurrentDisplayMode.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_GetCurrentDisplayMode =
-Use this function to fill in information about the current display mode.
+Use this function to get information about the current display mode.
 
 
 == Syntax ==
@@ -13,11 +13,11 @@ int SDL_GetCurrentDisplayMode(SDL_DisplayMode* mode)
 == Function Parameters ==
 {|
 |'''mode'''
-|the desired display mode
+|a pointer to an [[SDL_DisplayMode]] structure that is filled in with the current display mode
 |}
 
 == Return Value ==
-Information about the current display mode.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
