--- a/SDL_GetCurrentDisplayMode.mediawiki
+++ b/SDL_GetCurrentDisplayMode.mediawiki
@@ -30,6 +30,7 @@ You can add useful comments here
 == Related Functions ==
 :[[SDL_GetDesktopDisplayMode]]
 :[[SDL_GetDisplayMode]]
+:[[SDL_SetWindowDisplayMode]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
