--- a/SDL_GetDesktopDisplayMode.mediawiki
+++ b/SDL_GetDesktopDisplayMode.mediawiki
@@ -30,6 +30,7 @@ You can add useful comments here
 == Related Functions ==
 :[[SDL_GetCurrentDisplayMode]]
 :[[SDL_GetDisplayMode]]
+:[[SDL_SetWindowDisplayMode]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
