--- a/SDL_WindowFlags.mediawiki
+++ b/SDL_WindowFlags.mediawiki
@@ -7,37 +7,37 @@ The flags on a window.
 
 == Values ==
 {|
-|SDL_WINDOW_FULLSCREEN = 0x00000001
+|SDL_WINDOW_FULLSCREEN
 |fullscreen window, implies borderless
 |-
-|SDL_WINDOW_OPENGL = 0x00000002
+|SDL_WINDOW_OPENGL
 |window usable with OpenGL context
 |-
-|SDL_WINDOW_SHOWN = 0x00000004
+|SDL_WINDOW_SHOWN
 |window is visible
 |-
-|SDL_WINDOW_BORDERLESS = 0x00000008
+|SDL_WINDOW_BORDERLESS
 |no window decoration
 |-
-|SDL_WINDOW_RESIZABLE = 0x00000010
+|SDL_WINDOW_RESIZABLE
 |window can be resized
 |-
-|SDL_WINDOW_MINIMIZED = 0x00000020
-|minimized
+|SDL_WINDOW_MINIMIZED
+|window is minimized
 |-
-|SDL_WINDOW_MAXIMIZED = 0x00000040
-|maximized
+|SDL_WINDOW_MAXIMIZED
+|window is maximized
 |-
-|SDL_WINDOW_INPUT_GRABBED = 0x00000100
+|SDL_WINDOW_INPUT_GRABBED
 |window has grabbed input focus
 |-
-|SDL_WINDOW_INPUT_FOCUS = 0x00000200
+|SDL_WINDOW_INPUT_FOCUS
 |window has input focus
 |-
-|SDL_WINDOW_MOUSE_FOCUS = 0x00000400
+|SDL_WINDOW_MOUSE_FOCUS
 |window has mouse focus
 |-
-|SDL_WINDOW_FOREIGN = 0x00000800
+|SDL_WINDOW_FOREIGN
 |window not created by SDL
 |}
 
