--- a/CategoryStruct.mediawiki
+++ b/CategoryStruct.mediawiki
@@ -5,7 +5,7 @@
 
 = SDL 1.3 API structures =
 
-<<FullSearchCached(category:CategoryStruct)>>
+<<FullSearch(category:CategoryStruct)>>
 
 ----
 CategoryCategory
