--- a/SDL_QueryTexture.mediawiki
+++ b/SDL_QueryTexture.mediawiki
@@ -45,6 +45,7 @@ You can add your code example here
 You can add useful comments here
 
 == Related Functions ==
+:[[SDL_CreateTexture]]
 :[[SDL_QueryTexturePixels]]
 
 ----
