--- a/SDL_RendererInfo.mediawiki
+++ b/SDL_RendererInfo.mediawiki
@@ -8,8 +8,8 @@ Information on the capabilities of a render driver or context.
 == Data Fields ==
 {|
 |<)>const char*
-|''name
-|the name of the renderer''
+|name
+|''the name of the renderer''
 |-
 |<)>Uint32
 |flags
