--- a/SDLFunctionTemplate.mediawiki
+++ b/SDLFunctionTemplate.mediawiki
@@ -17,7 +17,8 @@ value SDL_FunctionName (param)
 |}
 
 == Return Value ==
-Remove this section if there is no Return Value
+Remove this section if there is no return value.
+''Many SDL functions use this standard text:''
 Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
