--- a/SDLFunctionTemplate.mediawiki
+++ b/SDLFunctionTemplate.mediawiki
@@ -2,12 +2,12 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_FunctionName =
-Use this function to /insert short function description here/.
+Use this function to /''insert short function description here''/.
 
 
 == Syntax ==
 ```c++
-value SDL_FunctionName (param)
+value SDL_FunctionName(param)
 ```
 
 == Function Parameters ==
@@ -17,8 +17,8 @@ value SDL_FunctionName (param)
 |}
 
 == Return Value ==
-Remove this section if there is no return value.
-''Many SDL functions use this standard text:''
+''Remove this section if there is no return value.
+Many SDL functions use this standard text:''
 Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
@@ -27,7 +27,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-You can add useful comments here
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_OtherFunction]]
