--- a/SDLFunctionTemplate.mediawiki
+++ b/SDLFunctionTemplate.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_FunctionName =
-Use this function to /''insert short function description here''/.
+Use this function to ''insert short function description here''.
 
 
 == Syntax ==
