--- a/SDL_RendererInfo.mediawiki
+++ b/SDL_RendererInfo.mediawiki
@@ -7,39 +7,39 @@ Information on the capabilities of a render driver or context.
 
 == Data Fields ==
 {|
-|<)>const char*
+|const char*
 |name
-|''the name of the renderer''
+|the name of the renderer
 |-
-|<)>Uint32
+|Uint32
 |flags
-|''supported'' [[SDL_RendererFlags]]
+|supported [[SDL_RendererFlags]]
 |-
-|<)>Uint32
+|Uint32
 |mod_modes
-|''a mask of supported channel modulation''
+|a mask of supported channel modulation
 |-
-|<)>Uint32
+|Uint32
 |blend_modes
 |a mask of supported blend modes
 |-
-|<)>Uint32
+|Uint32
 |scale_modes
 |a mask of supported scale modes
 |-
-|<)>Uint32
+|Uint32
 |num_texture_formats
 |the number of available texture formats
 |-
-|<)>Uint32
+|Uint32
 |texture_formats[20]
 |the available texture formats
 |-
-|<)>int
+|int
 |max_texture_width
 |the maximimum texture width
 |-
-|<)>int
+|int
 |max_texture_height
 |the maximimum texture height
 |}
