--- a/SDL_RendererInfo.mediawiki
+++ b/SDL_RendererInfo.mediawiki
@@ -8,7 +8,7 @@ Information on the capabilities of a render driver or context.
 == Data Fields ==
 {|
 |const char*
-|'''name'''
+|''name''
 |the name of the renderer
 |-
 |Uint32
