--- a/SDL_RendererInfo.mediawiki
+++ b/SDL_RendererInfo.mediawiki
@@ -54,7 +54,7 @@ You can add your code example here
 == Remarks ==
 <span id="flags"></span> '''flags''' may be 0 or a mask of any of the following [[SDL_RendererFlags]] values OR'd together:  <<Include(SDL_RendererFlags, , , from="== Values ==", to="== Code Examples ==")>>
 
-<span id="mod_modes"></span> '''mod_modes''' may be SDL_TEXTUREMODULATE_NONE or a mask of any of the other [[SDL_TextureModulate]] values OR'd together:  <<Include(SDL_TextureModulate, , , from="== Values ==", to="== Code Examples ==")>>
+<span id="mod_modes"></span> '''mod_modes''' is a mask of channel modulation modes supported by a renderer.  It may be SDL_TEXTUREMODULATE_NONE or a mask of any of the other [[SDL_TextureModulate]] values OR'd together:  <<Include(SDL_TextureModulate, , , from="== Values ==", to="== Code Examples ==")>>
 
 <span id="blend_modes"></span> '''blend_modes''' 
 
