--- a/SDLStructTemplate.mediawiki
+++ b/SDLStructTemplate.mediawiki
@@ -5,8 +5,8 @@
 A structure that contains ''replace with brief description of the structure''.
 
 
-<!-- #Remove this comment from the struct page when creating page.   -->
-To automatically show Data Fields content from this page on a function page place the following markup in the Remarks section of the related function(s), where structure is replaced by the actual structure name:  <<Include(SDL_structure, , , from="== Data Fields ==", to="== Code Examples ==")>>
+<!-- #Remove these comments from the new struct page before saving.   -->
+<!-- #To automatically show Data Fields content from this page on a function page place the following markup in the Remarks section of the related function(s), where structure is replaced by the actual structure name:  <<Include(SDL_structure, , , from="== Data Fields ==", to="== Code Examples ==")>> -->
 
 == Data Fields ==
 {|
