--- a/SDLEnumTemplate.mediawiki
+++ b/SDLEnumTemplate.mediawiki
@@ -2,10 +2,10 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_Enumeration =
-Flags / Values used when /choose start, replace over slashes with description of the enum/.
+Flags / Values used when ''replace with description of the enum''.
 
 
-<!-- Remove this comment from the Enum page when creating page.  
+<!-- Remove this comment from the new Enum page when creating page.  
 To automatically show Values content from this page on a function page place the following markup in the Remarks section of the related function(s), where enumeration is replaced by the actual enumeration name:
 <<Include(SDL_enumeration, , , from="== Values ==", to="== Code Examples ==")>> -->
 
@@ -27,7 +27,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-You can add useful comments here
+''You can add useful comments here''
 
 == Related Structures ==
 :[[SDL_StructureRemoveSectionIfEmpty]]
