--- a/SDLEnumTemplate.mediawiki
+++ b/SDLEnumTemplate.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_Enumeration =
-Flags / Values used when ''replace with description of the enum''.
+An enumeration that ''replace with description of the enum''.
 
 
 <!-- Remove this comment from the new Enum page when creating page.  
