--- a/SDL_DisplayMode.mediawiki
+++ b/SDL_DisplayMode.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_DisplayMode =
-The structure that defines a display mode.
+A structure that contains data to define a display mode.
 
 
 == Data Fields ==
@@ -34,7 +34,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-You can add useful comments here
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_GetClosestDisplayMode]]
