--- a/SDL_DisplayMode.mediawiki
+++ b/SDL_DisplayMode.mediawiki
@@ -7,24 +7,24 @@ A structure that contains data to define a display mode.
 
 == Data Fields ==
 {|
-|<)> ''Uint32''
-|''format''
+|Uint32
+|'''format'''
 |pixel format
 |-
-|<)> ''int''
-|''w''
+|int
+|'''w'''
 |width
 |-
-|<)> ''int''
-|''h''
+|int
+|'''h'''
 |height
 |-
-|<)> ''int''
-|''refresh_rate''
+|int
+|'''refresh_rate'''
 |refresh rate (or zero for unspecified)
 |-
-|<)> ''void*''
-|''driverdata''
+|void*
+|'''driverdata'''
 |driver-specific data, initialize to 0
 |}
 
