--- a/SDL_SetWindowFullscreen.mediawiki
+++ b/SDL_SetWindowFullscreen.mediawiki
@@ -29,7 +29,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-You can add useful comments here
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_GetWindowDisplayMode]]
