--- a/SDL_QueryTexture.mediawiki
+++ b/SDL_QueryTexture.mediawiki
@@ -34,7 +34,7 @@ int SDL_QueryTexture(SDL_TextureID textureID,
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if the texture is not valid''; call [[SDL_GetError]]() for more information''.
+Returns 0 on success or -1 if the texture is not valid; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -42,7 +42,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-You can add useful comments here
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_CreateTexture]]
