--- a/SDL_PixelFormatEnumToMasks.mediawiki
+++ b/SDL_PixelFormatEnumToMasks.mediawiki
@@ -45,7 +45,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-You can add useful comments here
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_MasksToPixelFormatEnum]]
