--- a/SDL_PixelFormatEnum.mediawiki
+++ b/SDL_PixelFormatEnum.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_PixelFormatEnum =
-Values used when creating pixel formats.
+An enumeration that sets values used when creating pixel formats.
 
 
 == Values ==
@@ -104,7 +104,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-You can add useful comments here
+''You can add useful comments here''
 
 == Related Structures ==
 :[[SDL_DisplayMode]]
