--- a/SDL_IsScreenSaverEnabled.mediawiki
+++ b/SDL_IsScreenSaverEnabled.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_IsScreenSaverEnabled =
-Use this function to return whether the screensaver is currently enabled (default off).
+Use this function to return whether the screensaver is currently enabled __(default off)__.
 
 
 == Syntax ==
@@ -19,7 +19,8 @@ You can add your code example here
 ```
 
 == Remarks ==
-You can add useful comments here ''Should "(default off)" from above be moved down here?''
+''You can add useful comments here'' 
+__Should "(default off)" from above be moved down here?__
 
 == Related Functions ==
 :[[SDL_DisableScreenSaver]]
