--- a/SDL_GetRendererInfo.mediawiki
+++ b/SDL_GetRendererInfo.mediawiki
@@ -26,7 +26,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-You can add useful comments here
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_CreateRenderer]]
