--- a/SDL_GetNumDisplayModes.mediawiki
+++ b/SDL_GetNumDisplayModes.mediawiki
@@ -11,7 +11,7 @@ int SDL_GetNumDisplayModes(void)
 ```
 
 == Return Value ==
-Returns a number >= 1 ''on success or a negative error code on failure; call [[SDL_GetError]]() for more information''.
+Returns a number >= 1 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -19,7 +19,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-You can add useful comments here
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_GetDisplayMode]]
