--- a/SDL_GetNumAudioDrivers.mediawiki
+++ b/SDL_GetNumAudioDrivers.mediawiki
@@ -23,7 +23,7 @@ for ( i = 0; i < SDL_GetNumAudioDrivers(); ++i ) {
 ```
 
 == Remarks ==
-You can add useful comments here
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_GetAudioDriver]]
