--- a/SDL_GetCurrentAudioDriver.mediawiki
+++ b/SDL_GetCurrentAudioDriver.mediawiki
@@ -19,7 +19,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-You can add useful comments here
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_AudioInit]]
