--- a/SDL_CloseAudioDevice.mediawiki
+++ b/SDL_CloseAudioDevice.mediawiki
@@ -22,7 +22,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-You can add useful comments here
+''You can add useful comments here''
 
 == Related Functions ==
 :[[SDL_OpenAudioDevice]]
