--- a/SDL_TextureAccess.mediawiki
+++ b/SDL_TextureAccess.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_TextureAccess =
-An enumeration that specifies the access pattern allowed for a texture.
+An enumeration that sets the access pattern allowed for a texture.
 
 
 == Values ==
