--- a/SDL_RendererInfo.mediawiki
+++ b/SDL_RendererInfo.mediawiki
@@ -33,7 +33,7 @@ A structure that contains information on the capabilities of a render driver or 
 |-
 |Uint32[20]
 |'''texture_formats'''
-|the available texture formats
+|the available texture formats; see [[#texture_formats|Remarks]] for details
 |-
 |int
 |'''max_texture_width'''
@@ -56,16 +56,18 @@ You can add your code example here
 
 <span id="mod_modes"></span> '''mod_modes''' may be SDL_TEXTUREMODULATE_NONE or a mask of any of the other [[SDL_TextureModulate]] values OR'd together:  <<Include(SDL_TextureModulate, , , from="== Values ==", to="== Code Examples ==")>>
 
-<span id="blend_modes"></span> '''blend_modes''' may be a mask of any of the following [[SDL_BlendMode]] values OR'd together: 
+<span id="blend_modes"></span> '''blend_modes''' may be SDL_BLENDMODE_NONE or a mask of any of the other [[SDL_BlendMode]] values OR'd together: <<Include(SDL_BlendMode, , , from="== Values ==", to="== Code Examples ==")>>
 
-<span id="scale_modes"></span> '''scale_modes''' 
+<span id="scale_modes"></span> '''scale_modes''' may be SDL_TEXTURESCALEMODE_NONE or a mask of any of the other [[SDL_TextureScaleMode]] values OR'd together: <<Include(SDL_TextureScaleMode, , , from="== Values ==", to="== Code Examples ==")>>
 
-<span id="texture_formats"></span> '''texture_formats''' is an array of [[SDL_PixelFormatEnum]] values representing the available texture formats for the renderer
+<span id="texture_formats"></span> '''texture_formats''' is an array of [[SDL_PixelFormatEnum]] values representing the available texture formats for the renderer <<Include(SDL_PixelFormatEnum, , , from="== Values ==", to="== Code Examples ==")>>
 
 == Related Enumerations ==
+:[[SDL_BlendMode]]
 :[[SDL_PixelFormatEnum]]
 :[[SDL_RendererFlags]]
 :[[SDL_TextureModulate]]
+:[[SDL_TextureScaleMode]]
 
 == Related Functions ==
 :[[SDL_GetRendererDriverInfo]]
