--- a/SDL_RendererInfo.mediawiki
+++ b/SDL_RendererInfo.mediawiki
@@ -72,6 +72,7 @@ You can add your code example here
 == Related Functions ==
 :[[SDL_GetRendererDriverInfo]]
 :[[SDL_GetRendererInfo]]
+:[[SDL_RenderCopy]]
 
 ----
 [[CategoryStruct]]
