--- a/SDL_GetAudioStatus.mediawiki
+++ b/SDL_GetAudioStatus.mediawiki
@@ -25,6 +25,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_GetAudioDeviceStatus]]
 :[[SDL_PauseAudio]]
 
 ----
