--- a/SDL_Palette.mediawiki
+++ b/SDL_Palette.mediawiki
@@ -10,14 +10,14 @@ A structure that contains palette information.
 |int
 |'''ncolors'''
 |-
-|SDL_Color
+|[[SDL_Color]]
 |'''*colors'''
 |should the * be with SDL_Color?
 |-
 |int
 |'''refcount'''
 |-
-|SDL_PaletteWatch
+|[[SDL_PaletteWatch]]
 |'''*watch'''
 |ditto
 |}
