--- a/SDL_AudioSpec.mediawiki
+++ b/SDL_AudioSpec.mediawiki
@@ -5,19 +5,6 @@
 A structure that contains audio data.  This structure ''(function in header)'' is called when the audio device needs more data.
 
 
-<!-- Remove this comment from the Struct page when creating page.  
-To automatically show Data Fields content from this page on a function page place the following markup in the Remarks section of the related function(s), where structure is replaced by the actual structure name:
-<<Include(SDL_structure, , , from="== Data Fields ==", to="== Code Examples ==")>> -->
-
-== Syntax ==
-```c++
-void (SDLCALL* callback)
-     (void*    userdata, 
-      Uint8*   stream, 
-      int      len);
-void* userdata
-```
-
 == Structure Parameters ==
 {|
 |'''stream'''
@@ -49,13 +36,17 @@ void* userdata
 |'''samples'''
 |audio buffer size in samples (power of 2)
 |-
-|Uint16
-|'''padding'''
-|necessary for some compile environments
-|-
 |Uint32
 |'''size'''
 |audio buffer size in bytes (calculated)
+|-
+|void*
+|'''userdata'''
+|
+|-
+|[[SDL_AudioCallback]]
+|'''callback'''
+|
 |}
 
 == Code Examples ==
@@ -69,6 +60,15 @@ The calculated values in this structure are calculated by [[SDL_OpenAudio]]().
 Once the callback returns, the buffer will no longer be valid.
 
 Stereo samples are stored in a LRLRLR ordering.
+
+The callback is of the form:
+```c++
+void (SDLCALL* callback)
+     (void*    userdata, 
+      Uint8*   stream, 
+      int      len);
+void* userdata
+```
 
 == Related Functions ==
 :[[SDL_LoadWAV_RW]]
