--- a/SDL_Color.mediawiki
+++ b/SDL_Color.mediawiki
@@ -9,15 +9,18 @@ A structure that contains color information.
 {|
 |Uint8
 |'''r'''
+|the red component in the range 0-255
 |-
 |Uint8
 |'''g'''
+|the green component in the range 0-255
 |-
 |Uint8
 |'''b'''
+|the blue component in the range 0-255
 |-
-|Uint8
-|'''unused'''
+|<style="color: #808080;">Uint8
+|<style="color: #808080;">'''unused'''
 |}
 
 == Code Examples ==
@@ -26,7 +29,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-[[SDL_Color]] and [[SDL_Colour]] are interchangeable.
+[[SDL_Color]] and SDL_<code></code>Colour are interchangeable.
 
 == Related Structures ==
 :[[SDL_Palette]]
