--- a/SDL_Color.mediawiki
+++ b/SDL_Color.mediawiki
@@ -21,6 +21,7 @@ A structure that contains color information.
 |-
 |<style="color: #808080;">Uint8
 |<style="color: #808080;">'''unused'''
+|<style="color: #808080;">32 bit placeholder
 |}
 
 == Code Examples ==
@@ -31,11 +32,18 @@ You can add your code example here
 == Remarks ==
 [[SDL_Color]] and SDL_<code></code>Colour are interchangeable.
 
+If you have RGB color values you would use decimal values in this struct.  ''Example'': orange = 255,165,0 so set r=255, g=165, b=0.  
+If you have HTML color codes you would use hexidecimal values in this struct.  ''Example'': orange = #FFA500 so set r=0xFF, g=0xA5, b=0x00.  
+
 == Related Structures ==
 :[[SDL_Palette]]
 
 == Related Functions ==
+:[[SDL_GetDisplayPalette]]
+:[[SDL_SetDisplayPalette]]
 :[[SDL_SetPaletteColors]]
+:[[SDL_GetTexturePalette]]
+:[[SDL_SetTexturePalette]]
 
 ----
 [[CategoryStruct]]
