--- a/SDL_Color.mediawiki
+++ b/SDL_Color.mediawiki
@@ -32,8 +32,10 @@ You can add your code example here
 == Remarks ==
 [[SDL_Color]] and SDL_<code></code>Colour are interchangeable.
 
-If you have RGB color values you would use decimal values in this struct.  ''Example'': orange = 255,165,0 so set r=255, g=165, b=0.  
-If you have HTML color codes you would use hexidecimal values in this struct.  ''Example'': orange = #FFA500 so set r=0xFF, g=0xA5, b=0x00.  
+If you have RGB color values you would use decimal values in this struct.  
+ ''Example'': orange = 255,165,0 so set r=255, g=165, b=0.  
+If you have HTML color codes you would use hexidecimal values in this struct.  
+ ''Example'': orange = #FFA500 so set r=0xFF, g=0xA5, b=0x00.  
 
 == Related Structures ==
 :[[SDL_Palette]]
